correction reset et ecriture dans span

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <div class="jeu__essais">
                 <h3>Vos essais</h3>
                 <ol class="jeu__liste">
-                    <li id="mot1"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
-                    <li id="mot2"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
-                    <li id="mot3"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
-                    <li id="mot4"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
-                    <li id="mot5"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
-                    <li id="mot6"><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span><span class="jeu__case"></span></li>
+                    <li id="mot1"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
+                    <li id="mot2"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
+                    <li id="mot3"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
+                    <li id="mot4"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
+                    <li id="mot5"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
+                    <li id="mot6"><p class="mot"><span></span><span></span><span></span><span></span><span></span></p></li>
                 </ol>
             </div>
         </section>
