debut modale pour regle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="menu">
         <h1>Mots de tête&#8239;!</h1>
         <h2 class="sous-titre">Mini-jeu</h2>
-        <img src="images/logo.svg" alt="">
+        <img src="images/logo.svg" alt="logo Mots de tête">
         <div class="menu__difficulte">
             <input type="radio" id="facile" checked name="difficulte" value="1">
             <label for="facile" class="interface__label">Facile</label>
@@ -33,8 +33,12 @@
             <button type="button" id="menuCommencer">Commencer la partie</button>
         </div>
     </div>
+    <div id="modalRegles" class="modal">
+        <div class="modal-content">
+
+        </div>
+    </div>
     <div class="motsDeTete">
-        <p class="regles">Règles du jeu</p>
         <h1>Mots de tête&#8239;!</h1>
         <h2 class="sous-titre">Mini-jeu</h2>
         <div class="interface">
