--- a/index.html
+++ b/index.html
@@ -56,33 +56,11 @@
                 <button type="button" id="btnRegle">Règles du jeu</button>
                 <button type="button" id="btnDifficulte">Difficultés</button>
             </div>
-            <!--            <div id="uneModale" class="modale">-->
-            <!--                <div class="modale__content">-->
-            <!--                    <span class="fermer">X</span>-->
-            <!--                    <input type="radio" id="facile" checked name="difficulte" value="1">-->
-            <!--                    <label for="facile" class="interface__label">Facile</label>-->
-            <!--                    <input type="radio" id="intermediaire" name="difficulte" value="2">-->
-            <!--                    <label for="intermediaire" class="interface__label">Intermédiaire</label>-->
-            <!--                    <input type="radio" id="difficile" name="difficulte" value="3">-->
-            <!--                    <label for="difficile" class="interface__label">Difficile</label>-->
-            <!--                </div>-->
-            <!--            </div>-->
-            <!--            <div class="interface__difficultes">-->
-            <!--                <input type="radio" id="facile" checked name="difficulte" value="1">-->
-            <!--                <label for="facile" class="interface__label">Facile</label>-->
-            <!--                <input type="radio" id="intermediaire" name="difficulte" value="2">-->
-            <!--                <label for="intermediaire" class="interface__label">Intermédiaire</label>-->
-            <!--                <input type="radio" id="difficile" name="difficulte" value="3">-->
-            <!--                <label for="difficile" class="interface__label">Difficile</label>-->
-            <!--            </div>-->
-            <!--            <div class="interface__piger">-->
-            <!--                <button type="button" id="btnJouer">Piger un mots</button>-->
-            <!--            </div>-->
-            <!--            <div class="interface__options">-->
-            <!--                <button type="button" id="btnReset" disabled>Reset</button>-->
-            <!--                <input type="text" id="mot" name="mot" maxlength="5" disabled placeholder="Écrire le mot ici">-->
-            <!--                <button type="button" id="btnEvaluer">Essayer -></button>-->
-            <!--            </div>-->
+        </div>
+        <div id="modalDifficulte" class="modalDifficulte">
+            <div class="modal-content-dif">
+
+            </div>
         </div>
         <div class="jeu">
 
