--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mots de tête</title>
+    <link rel="icon" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap" rel="stylesheet">
@@ -33,6 +34,7 @@
     </div>
     <div role="dialog" aria-modal="true" aria-labelledby="modal__h2" id="modalRegles" class="modal">
         <div class="modal-content">
+            <button type="button" class="close">&times;</button>
             <h2 id="modal__h2">Règles du jeu</h2>
             <ol class="regle">
                 <li class="regle__contenu">
@@ -47,8 +49,8 @@
                 </li>
                 <li class="regle__contenu">
                     <span class="regle__numero">3</span>
-                    <p class="regle__texte">Vous pouvez, en tout temps, réinitiliser en cliquant sur le bouton R ou en
-                        choisissant une nouvelle difficultée</p>
+                    <p class="regle__texte">Vous pouvez, en tout temps, réinitiliser en cliquant sur le bouton <i class="fa-solid fa-rotate-right"></i> ou en
+                        choisissant une nouvelle difficulté</p>
                 </li>
                 <li class="regle__contenu">
                     <span class="regle__numero">4</span>
@@ -62,6 +64,7 @@
         <div role="dialog" aria-modal="true" aria-labelledby="h3Modal" id="modalDifficulte"
              class="modalDifficulte">
             <div class="modal-content">
+                <button type="button" class="close">&times;</button>
                 <h3 id="h3Modal" class="h3Mod">Choisir une nouvelle difficulté</h3>
                 <div class="menu__difficulte">
                     <input type="radio" id="facileMod" name="difficulteMod" value="1">
@@ -74,6 +77,7 @@
             </div>
         </div>
         <div class="jeu">
+            <h2>Difficulté : <span id="difficulte"></span> </h2>
             <div class="jeu__essais">
                 <ol class="jeu__liste">
                     <li id="mot1"><p class="mot"></p>
@@ -96,11 +100,12 @@
                 <button type="button" id="btnRegle">Règles du jeu</button>
                 <button type="button" id="btnDifficulte">Difficultés</button>
             </div>
+            <span id="erreur"></span>
             <div class="interface__mot">
-                <button type="button" id="btnReset"><i class="fa-solid fa-rotate-right"></i></button>
-                <input type="text" id="mot" name="mot" maxlength="8" placeholder="Écrire le mot ici">
-                <label for="mot"></label>
-                <button type="button" id="btnEvaluer">Essayer -></button>
+                <button type="button" id="btnReset"><i class="fa-solid fa-rotate-right reset"></i></button>
+                <input type="text" id="mot" name="mot" minlength="5" maxlength="5" placeholder="Écrire le mot ici">
+                <label for="mot" class="labelMot"></label>
+                <button type="button" id="btnEvaluer">Essayer <i class="fa-solid fa-arrow-right fleche"></i></button>
             </div>
         </div>
         <div role="dialog" aria-modal="true" aria-labelledby="h3Reussis" id="modaleReussis" class="modal-reussis">
@@ -108,10 +113,11 @@
                 <h3 id="h3Reussis" class="h3Mod">Bravo, Vous avez trouvé le mot!!</h3>
                 <div class="modal-reussis__stats">
                     <h4>Statistique</h4>
-                    <p>Nombre d'essaies : <span id="essaies">0</span></p>
-                    <p>Mots trouvés : <span id="trouvés">0</span></p>
+                    <p>Nombre d'essais : <span id="essais">0</span></p>
+                    <p>Mots consécutifs trouvés : <span id="trouvés">0</span></p>
                 </div>
-                <h4>Changer la difficulté ?</h4>
+                <h4>Sélectionner la difficulté</h4>
+                <span id="choixReussis"></span>
                 <div class="menu__difficulte">
                     <input type="radio" id="facileReussis" name="difficulteReussis" value="1">
                     <label for="facileReussis" class="interface__label">Facile</label>
@@ -120,6 +126,24 @@
                     <input type="radio" id="difficileReussis" name="difficulteReussis" value="3">
                     <label for="difficileReussis" class="interface__label">Difficile</label>
                 </div>
+                <button id="btnDiffReussis" type="button">Rejouer</button>
+            </div>
+        </div>
+        <div role="dialog" aria-modal="true" aria-labelledby="h3Echec" id="modaleEchec" class="modal-echec">
+            <div class="modal-echec__content">
+                <h3 id="h3Echec" class="h3Mod">Dommage, vous avez épuisez tout vos essais :(</h3>
+                <h4>Le mot était : <span class="bonMot" id="bonMot"></span></h4>
+                <h4>Sélectionner la difficulté</h4>
+                <span id="choixEchec"></span>
+                <div class="menu__difficulte">
+                    <input type="radio" id="facileEchec" name="difficulteEchec" value="1">
+                    <label for="facileEchec" class="interface__label">Facile</label>
+                    <input type="radio" id="intermediaireEchec" name="difficulteEchec" value="2">
+                    <label for="intermediaireEchec" class="interface__label">Intermédiaire</label>
+                    <input type="radio" id="difficileEchec" name="difficulteEchec" value="3">
+                    <label for="difficileEchec" class="interface__label">Difficile</label>
+                </div>
+                <button id="btnDiffEchec" type="button">Rejouer</button>
             </div>
         </div>
     </div>
